# sgm

sgm/CrossingCars/masks/: 000000_0.pgm  000000_1.pgm  000001_0.pgm  000001_1.pgm  000002_0.pgm  000002_1.pgm  000003_0.pgm  000003_1.pgm  000004_0.pgm  000004_1.pgm  000005_0.pgm  000005_1.pgm  000006_0.pgm  000006_1.pgm  000007_0.pgm  000007_1.pgm  000008_0.pgm  000008_1.pgm  000009_0.pgm  000009_1.pgm  000010_0.pgm  000010_1.pgm  000011_0.pgm  000011_1.pgm  000012_0.pgm  000012_1.pgm  000013_0.pgm  000013_1.pgm  000014_1.pgm  000016_0.pgm  000018_0.pgm  000019_0.pgm  000019_1.pgm  000020_0.pgm  000020_1.pgm  000021_0.pgm  000021_1.pgm  000022_0.pgm  000022_1.pgm  000023_0.pgm  (+10 more)
sgm/CrossingCars/sequence/: 000000_0.pgm  000000_1.pgm  000001_0.pgm  000001_1.pgm  000002_0.pgm  000002_1.pgm  000003_0.pgm  000003_1.pgm  000004_0.pgm  000004_1.pgm  000005_0.pgm  000005_1.pgm  000006_0.pgm  000006_1.pgm  000007_0.pgm  000007_1.pgm  000008_0.pgm  000008_1.pgm  000009_0.pgm  000009_1.pgm  000010_0.pgm  000010_1.pgm  000011_0.pgm  000011_1.pgm  000012_0.pgm  000012_1.pgm  000013_0.pgm  000013_1.pgm  000014_0.pgm  000014_1.pgm  000015_0.pgm  000015_1.pgm  000016_0.pgm  000016_1.pgm  000017_0.pgm  000017_1.pgm  000018_0.pgm  000018_1.pgm  000019_0.pgm  000019_1.pgm  (+18 more)
sgm/src/: .StereoSGM.hpp.swp  FastFilters.cpp  FastFilters.h  Makefile  MyImage.h  MyImage.hpp  StereoBMHelper.cpp  StereoBMHelper.h  StereoSGM.h  StereoSGM.hpp  StereoSGM_SSE.hpp  makefile  rSGMCmd  rSGMCmd.cpp
uav/: CMakeLists.txt  Doxyfile  README.md
uav/cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
uav/src/: .csgm.cpp.swp  config.hpp  costs.hpp  csgm.cpp  csgm.h  main.cpp
